--- a/src/app/assinatura/assinatura.component.css
+++ b/src/app/assinatura/assinatura.component.css
@@ -16,7 +16,6 @@
     font-family: Arial, sans-serif; /* Fonte padrão */
     font-size: 14px; /* Tamanho da fonte */
     color: #7c7c7c; /* Cor do texto */
-    max-height: 188px; /* Altura máxima */
     overflow: hidden; /* Oculta conteúdo que ultrapassa a altura */
     margin-bottom: 20px; /* Espaçamento inferior */
 }
@@ -56,37 +55,6 @@
     margin: none;
 }
 
-.signature-container img.logo {
-    vertical-align: middle; /* Alinha verticalmente as imagens */
-    width: 100px; /* Largura das imagens */
-    height: auto; /* Altura automática */
-    margin-right: 10px; /* Espaçamento direita */
-}
-
-.logos-table {
-    width: 100%; /* Ocupa toda a largura disponível */
-    background-color: #000000; /* Cor de fundo dos logos */
-    border-collapse: collapse; /* Remove o espaçamento entre as células */
-    margin-right: 10px;
-}
-
-.logos-table td {
-    padding: 10px; /* Espaçamento interno das células */
-    font-family: Arial, sans-serif; /* Fonte Arial */
-}
-
-.logo {
-    vertical-align: middle; /* Alinha verticalmente as imagens */
-    width: auto; /* Largura automática */
-    max-width: 100px; /* Largura máxima das imagens */
-}
-
-.separator {
-    width: 1px; /* Largura da linha separadora */
-    background-color: #b1b1b1; /* Cor da linha separadora */
-    height: 100%; /* Altura total */
-}
-
 .signature-container table td.telefone {
     padding: 5px; /* Espaçamento interno das células */
     text-align: left; /* Alinhamento do texto à esquerda */
@@ -105,46 +73,102 @@
     white-space: nowrap; /* Impede a quebra de linha */
 }
 
-
-.cargo{
+.cargo {
     color: rgba(60, 61, 63, 0.904);
     font-size: 16px;
     font-weight: bold;
-    
-}
-.nome{
-   color: rgba(60, 61, 63, 0.918);
-    font-size: 18px; 
 }
 
-.informacoes{
-color: rgb(133, 132, 135);
-font-size: 13px; 
+.nome {
+    color: rgba(60, 61, 63, 0.918);
+    font-size: 18px;
 }
-.email{
-color: rgb(133, 132, 135);
-font-size: 13px; 
-}
-.endereco{
+
+.informacoes {
     color: rgb(133, 132, 135);
-    font-size: 13px; 
+    font-size: 13px;
+}
+
+.email {
+    color: rgb(133, 132, 135);
+    font-size: 13px;
+}
+
+.endereco {
+    color: rgb(133, 132, 135);
+    font-size: 13px;
 }
 
 .info-icon {
-    margin-right: 5px; /* Espaçamento entre o ícone e o texto */
-    vertical-align: middle; /* Alinha verticalmente o ícone */
+    margin-right: 5px;
+    vertical-align: middle;
 }
 
 .info-icon img {
-    width: 16px; /* Define largura do ícone */
-    height: 16px; /* Define altura do ícone */
+    width: 16px;
+    height: 16px;
 }
+
 .info-icon-email {
-    margin-right: 5px; /* Espaçamento entre o ícone e o texto */
-    vertical-align: middle; /* Alinha verticalmente o ícone */
+    margin-right: 5px;
+    vertical-align: middle;
 }
 
 .info-icon-email img {
-    width: 16px; /* Define largura do ícone */
-    height: 12px; /* Define altura do ícone */
+    width: 16px;
+    height: 12px;
+}
+
+.logos-table-hope {
+    background-color: #000000; /* Cor de fundo dos logos */
+    border-collapse: collapse; /* Remove o espaçamento entre as células */
+    text-align: center; /* Centraliza horizontalmente os conteúdos */
+    width: 100%; /* Define a largura da tabela */
+    margin-bottom: 10px; /* Espaçamento inferior */
+    max-height: 52px; /* Altura máxima da tabela */
+    overflow: hidden; /* Oculta conteúdo que ultrapassa a altura */
+    display: flex;
+    justify-content: space-between; /* Distribui os itens uniformemente */
+    align-items: center; /* Alinha os itens verticalmente */
+}
+
+.logo {
+    vertical-align: middle; /* Alinha verticalmente as imagens */
+    max-width: 120px; /* Largura máxima das imagens */
+    height: auto; /* Altura automática */
+}
+
+.esperanca,
+.bonjuor,
+.grupohope,
+.hope,
+.hoperesort {
+    margin: 0 10px; /* Margem entre os logos */
+}
+
+.bonjuor {
+    max-width: 100px; /* Reduz a largura do Bonjour Logo */
+}
+
+.hoperesort {
+    max-width: 150px; /* Ajusta a largura do Hope Resort Logo */
+    margin-left: auto; /* Move o Hope Resort Logo para a direita */
+}
+
+.grupohope{
+    padding-top: 5px;
+}
+
+ .bonjuor{
+    height: 40px;
+    padding-top: 5px;
+ }
+
+ .hope{
+    padding-top: 7px;
+ }
+.hoperesort{
+    margin-top: 9px;
+    margin-left: 4px;
+    height: 20px;
 }
