Atualizado logo resort

--- a/src/app/assinatura/assinatura.component.html
+++ b/src/app/assinatura/assinatura.component.html
@@ -53,7 +53,7 @@
                         </td>
                         <td><img src="../../assets/bonjour-logo.png" alt="Bonjour Logo" class="logo bonjuor"></td>
                         <td><img src="../../assets/hope-logo.png" alt="Hope Logo" class="logo hope"></td>
-                        <td><img src="../../assets/hoperesortfundo.png" alt="Hope Resort Logo" class="logo hoperesort">
+                        <td><img src="../../assets/HOPE_RESORT.png" alt="Hope Resort Logo" class="logo hoperesort">
                         </td>
                     </tr>
                 </tbody>
