--- a/src/app/assinatura/assinatura.component.css
+++ b/src/app/assinatura/assinatura.component.css
@@ -1,23 +1,35 @@
 /* Reset CSS */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .signature-container {
-    max-width: 1000px; /* Define uma largura máxima */
-    padding: 10px; /* Espaçamento interno */
-    background-color: #ffffff; /* Cor de fundo branca */
-    border: 1px solid #ddd; /* Borda cinza */
-    border-radius: 5px; /* Borda arredondada */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Sombra suave */
-    line-height: 1.6; /* Altura das linhas */
-    font-family: Arial, sans-serif; /* Fonte padrão */
-    font-size: 14px; /* Tamanho da fonte */
-    color: #7c7c7c; /* Cor do texto */
-    overflow: hidden; /* Oculta conteúdo que ultrapassa a altura */
-    margin-bottom: 20px; /* Espaçamento inferior */
+    max-width: 1000px;
+    /* Define uma largura máxima */
+    padding: 10px;
+    /* Espaçamento interno */
+    background-color: #ffffff;
+    /* Cor de fundo branca */
+    border: 1px solid #ddd;
+    /* Borda cinza */
+    border-radius: 5px;
+    /* Borda arredondada */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    /* Sombra suave */
+    line-height: 1.6;
+    /* Altura das linhas */
+    font-family: Arial, sans-serif;
+    /* Fonte padrão */
+    font-size: 14px;
+    /* Tamanho da fonte */
+    color: #7c7c7c;
+    /* Cor do texto */
+    overflow: hidden;
+    /* Oculta conteúdo que ultrapassa a altura */
+    margin-bottom: 20px;
+    /* Espaçamento inferior */
 }
 
 .signature-content {
@@ -28,49 +40,75 @@
 }
 
 .signature-container table {
-    width: 100%; /* Ocupa toda a largura disponível */
-    table-layout: fixed; /* Fixa a largura das células */
-    border-collapse: collapse; /* Remove o espaçamento entre as células da tabela */
-    margin-bottom: 10px; /* Espaçamento inferior */
+    width: 100%;
+    /* Ocupa toda a largura disponível */
+    table-layout: fixed;
+    /* Fixa a largura das células */
+    border-collapse: collapse;
+    /* Remove o espaçamento entre as células da tabela */
+    margin-bottom: 10px;
+    /* Espaçamento inferior */
 }
 
 .signature-container table td,
 .signature-container table th {
-    padding: 3px; /* Reduz o espaçamento interno das células */
-    text-align: left; /* Alinhamento do texto à esquerda */
-    vertical-align: top; /* Alinhamento vertical no topo */
-    border: none; /* Remove as bordas */
-    line-height: 1; /* Ajusta a altura das linhas */
+    padding: 3px;
+    /* Reduz o espaçamento interno das células */
+    text-align: left;
+    /* Alinhamento do texto à esquerda */
+    vertical-align: top;
+    /* Alinhamento vertical no topo */
+    border: none;
+    /* Remove as bordas */
+    line-height: 1;
+    /* Ajusta a altura das linhas */
 }
 
 .signature-container table td {
-    text-align: left; /* Alinhamento do texto à esquerda */
-    vertical-align: top; /* Alinhamento vertical no topo */
-    border: none; /* Remove as bordas */
-    white-space: nowrap; /* Impede a quebra de linha */
+    text-align: left;
+    /* Alinhamento do texto à esquerda */
+    vertical-align: top;
+    /* Alinhamento vertical no topo */
+    border: none;
+    /* Remove as bordas */
+    white-space: nowrap;
+    /* Impede a quebra de linha */
 }
 
 .signature-container tr {
-    border: none; /* Remove as bordas entre as linhas */
+    border: none;
+    /* Remove as bordas entre as linhas */
     margin: none;
 }
 
 .signature-container table td.telefone {
-    padding: 5px; /* Espaçamento interno das células */
-    text-align: left; /* Alinhamento do texto à esquerda */
-    vertical-align: top; /* Alinhamento vertical no topo */
-    border: none; /* Remove as bordas */
-    margin: 0; /* Remove margens */
-    width: auto; /* Largura automática */
-    white-space: nowrap; /* Impede a quebra de linha */
+    padding: 5px;
+    /* Espaçamento interno das células */
+    text-align: left;
+    /* Alinhamento do texto à esquerda */
+    vertical-align: top;
+    /* Alinhamento vertical no topo */
+    border: none;
+    /* Remove as bordas */
+    margin: 0;
+    /* Remove margens */
+    width: auto;
+    /* Largura automática */
+    white-space: nowrap;
+    /* Impede a quebra de linha */
 }
 
 .signature-container table td.ramal {
-    padding-left: 10px; /* Espaçamento à esquerda para separação */
-    text-align: left; /* Alinhamento do texto à esquerda */
-    vertical-align: top; /* Alinhamento vertical no topo */
-    border: none; /* Remove as bordas */
-    white-space: nowrap; /* Impede a quebra de linha */
+    padding-left: 10px;
+    /* Espaçamento à esquerda para separação */
+    text-align: left;
+    /* Alinhamento do texto à esquerda */
+    vertical-align: top;
+    /* Alinhamento vertical no topo */
+    border: none;
+    /* Remove as bordas */
+    white-space: nowrap;
+    /* Impede a quebra de linha */
 }
 
 .cargo {
@@ -120,55 +158,68 @@
 }
 
 .logos-table-hope {
-    background-color: #000000; /* Cor de fundo dos logos */
-    border-collapse: collapse; /* Remove o espaçamento entre as células */
-    text-align: center; /* Centraliza horizontalmente os conteúdos */
-    width: 100%; /* Define a largura da tabela */
-    margin-bottom: 10px; /* Espaçamento inferior */
-    max-height: 52px; /* Altura máxima da tabela */
-    overflow: hidden; /* Oculta conteúdo que ultrapassa a altura */
+    background-color: #000000;
+    /* Cor de fundo dos logos */
+    border-collapse: collapse;
+    /* Remove o espaçamento entre as células */
+    text-align: center;
+    /* Centraliza horizontalmente os conteúdos */
+    width: 100%;
+    /* Define a largura da tabela */
+    margin-bottom: 10px;
+    /* Espaçamento inferior */
+    max-height: 52px;
+    /* Altura máxima da tabela */
+    overflow: hidden;
+    /* Oculta conteúdo que ultrapassa a altura */
     display: flex;
-    justify-content: space-between; /* Distribui os itens uniformemente */
-    align-items: center; /* Alinha os itens verticalmente */
+    justify-content: space-between;
+    /* Distribui os itens uniformemente */
+    align-items: center;
+    /* Alinha os itens verticalmente */
 }
 
 .logo {
-    vertical-align: middle; /* Alinha verticalmente as imagens */
-    max-width: 120px; /* Largura máxima das imagens */
-    height: auto; /* Altura automática */
+    vertical-align: middle;
+    /* Alinha verticalmente as imagens */
+    max-width: 120px;
+    /* Largura máxima das imagens */
+    height: auto;
+    /* Altura automática */
 }
 
 .esperanca,
 .bonjuor,
 .grupohope,
-.hope,
-.hoperesort {
-    margin: 0 10px; /* Margem entre os logos */
+.hope {
+    margin: 0 10px;
+    /* Margem entre os logos */
 }
 
 .bonjuor {
-    max-width: 100px; /* Reduz a largura do Bonjour Logo */
+    max-width: 100px;
+    /* Reduz a largura do Bonjour Logo */
+}
+
+.esperanca{
+    margin-top: 2px;
+}
+
+.grupohope {
+    padding-top: 5px;
+}
+
+.bonjuor {
+    height: 40px;
+    padding-top: 5px;
+}
+
+.hope {
+    padding-top: 7px;
 }
 
 .hoperesort {
-    max-width: 150px; /* Ajusta a largura do Hope Resort Logo */
-    margin-left: auto; /* Move o Hope Resort Logo para a direita */
-}
-
-.grupohope{
-    padding-top: 5px;
-}
-
- .bonjuor{
-    height: 40px;
-    padding-top: 5px;
- }
-
- .hope{
-    padding-top: 7px;
- }
-.hoperesort{
-    margin-top: 9px;
-    margin-left: 4px;
-    height: 20px;
+    margin-left: 1px;
+    max-width: 175px;
+    align-items: center;
 }
